--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Autonomous Cyber AI</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+		<link rel="shortcut icon" href="./img/logo2.png" type="image/x-icon">
 		<!-- google fonts -->
 
 		<!-- Css link -->
